# GraphBug---AI-Service

./: .dockerignore  .env.docker  .env.example  .gitignore  BUG_FIXES_2026-02-02.md  CONTEXT_RETRIEVAL_DEBUG.md  Dockerfile  HF_DEPLOYMENT_CHECKLIST.md  HF_DEPLOYMENT_README.md  HUGGINGFACE_DEPLOYMENT.md  QUICK_START_HF.md  README.md  README_HF.md  SEARCH_TEST_RESULTS.md  check_graph_relationships.py  check_repo_id_mismatch.py  check_repo_ingestion.py  deploy-hf.sh  deploy-to-hf.sh  diagnose_context_retrieval.py  docker-build-test.sh  docker-compose.yml  init_neo4j.py  init_qdrant.py  pipeline_test.py  pyproject.toml  quick_check_ingestion.py  quick_test_search.py  requirements.txt  setup_zed_queries.py  sync-to-hf.sh  verify_search.py
src/: analyzer.py  api.py  cleanup.py  config.py  context_builder.py  context_merger.py  cost_optimizer.py  gemini_client.py  github_client.py  graph_builder.py  incremental_ingest.py  ingestion_lock.py  logger.py  parser.py  rate_limiter.py  review_api.py  review_formatter.py  review_poster.py  review_storage.py  review_validator.py  security_utils.py  temporary_graph.py  vector_builder.py  webhook_integration.py  workflow.py
src/queries/bash/: tags.scm
src/queries/dockerfile/: tags.scm
src/queries/hcl/: tags.scm
src/queries/html/: tags.scm
src/queries/lua/: tags.scm
src/queries/toml/: tags.scm
src/queries/vue/: tags.scm
tests/: test_integration.py  test_phase5_integration.py  test_security.py  test_temporary_graphrag.py  test_workflow.py
